adding final changes

--- a/lib/css/styling.css
+++ b/lib/css/styling.css
@@ -65,7 +65,34 @@ li a{
   color: black;
   padding: 10px 10px;
 }
-
+/*
+.dropBtn {
+    background-color: grey;
+    color: white;
+    padding: 10px;
+	}
+.dropDown {
+    position: relative;
+    display: inline-block;
+}
+.dropLinks a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropDown:hover .dropLinks {
+    display: inline-block;
+}
+.dropDown:hover .dropLinks{
+  background: white;
+  display: inline-block;
+}
+#ul-links{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+}*/
 /*NAV BAR END*/
 
 
@@ -116,10 +143,10 @@ table, tr, td{
 /*TABLE END*/
 
 /*CODEPEN START*/
-#penHeader{
+H1#penHeader{
 	font-family: 'Dosis', sans-serif;
-	margin: 0 auto;
 }
 .penContainer{
+	width: 100px;
 	margin: 0 auto;
 }
